maild.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: maild
  name: maild
spec:
  replicas: 2
  selector:
    matchLabels:
      app: maild
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: maild
    spec:
      containers:
      - image: vimal13/mailapp:v1
        name: mailapp
        resources: {}
status: {}
