searchd.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: searchd
  name: searchd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: searchd
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: searchd
    spec:
      containers:
      - image: vimal13/searchapp:v1
        name: searchapp
        resources: {}
status: {}
