mailservice.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: maild
  name: maild
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: maild
  type: NodePort
status:
  loadBalancer: {}
