searchservice.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: searchd
  name: searchd
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: searchd
  type: NodePort
status:
  loadBalancer: {}
